# cstd

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  cstd.cpp  cstd.h  error.cpp  error.h  math.cpp  math.h  mem.cpp  mem.h  minmax.cpp  minmax.h  rand.cpp  rand.h  rangecheck.cpp  rangecheck.h
collections/: BinaryChunkVec.cpp  BinaryChunkVec.h  ChunkVec.cpp  ChunkVec.h  ConcurrentHashMap.cpp  ConcurrentHashMap.h  ConcurrentLinkedList.cpp  ConcurrentLinkedList.h  ConcurrentLinkedListIter.cpp  ConcurrentLinkedListIter.h  HashMap.cpp  HashMap.h  HashSet.cpp  HashSet.h  LinkedList.cpp  LinkedList.h  LinkedListIter.cpp  LinkedListIter.h  Queue.cpp  Queue.h  QueueConcurrentIter.cpp  QueueConcurrentIter.h  QueueIter.cpp  QueueIter.h  Vec.cpp  Vec.h  common.cpp  common.h
collections/hash/: hash.cpp  hash.h  md5.cpp  md5.h  murmur3.cpp  murmur3.h
io/: FileDescriptorReader.cpp  FileDescriptorReader.h  FileDescriptorWriter.cpp  FileDescriptorWriter.h  common.h
io/fs/: File.cpp  File.h  FileOptions.cpp  FileOptions.h  FileReader.cpp  FileReader.h  Path.cpp  Path.h
io/net/: NetAddress.cpp  NetAddress.h  TcpListener.cpp  TcpListener.h  TcpSocket.cpp  TcpSocket.h
log/: Logger.cpp  Logger.h
string/: String.cpp  String.h  StringConversion.cpp  StringConversion.h  StringIter.cpp  StringIter.h  Utf8Util.cpp  Utf8Util.h
thread/: Mutex.cpp  Mutex.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h
time/: DateTime.cpp  DateTime.h  Duration.h  Timer.cpp  Timer.h  Timestamp.cpp  Timestamp.h
